# Neonpool

./: README.md  neonpoolBTC.cpp
bf/: h3.hpp  hash.hpp
debug/: debug_cumulative.csv
helpers/: primitives.h
neonpoolBTC/: CMakeLists.txt
neonpoolBTC/bf/: hash.cpp
neonpoolBTC/debug/: debug_hourly.csv
neonpoolBTC/helpers/: primitives (copy).h
neonpoolETH/: CMakeLists.txt  neonpoolETH.cpp
neonpoolETH/debug/: debug_cumulative.csv  debug_hourly.csv
